# ror

./: .gitignore  Cargo.toml  README.md
src/: .cnofig.rs.swp  .delete.rs.swo  .group.rs.swp  .groups.rs.swp  .install.rc.swp  .install.rs.swm  .install.rs.swn  .install.rs.swo  .rootfs.rs.swo  .rootfs.rs.swp  .rootfs.rsr.swp  .search-rs.swp  .search.rs.swl  .search.rs.swm  .search.rs.swn  .search.rs.swo  .sync.rs.swp  .sync.s.swp  config.rs  debug.rs  delete.rs  group.rs  info.rs  install.rs  listinstalled.rs  main.rs  parallel.rs  progress.rs  repo.rs  rootfs.rs  search.rs  sync.rs  update.rs
