[package]
name = "ror"
version = "0.3.0"
edition = "2024"
authors = ["rorka900"]
description = "RorkOS package manager"
license = "GPL-3.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
git2 = "0.20"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
config = { version = "0.14", default-features = false, features = ["ini"] }
xz2 = "0.1"
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
walkdir = "2"
chrono = "0.4"
semver = "1.0"
ar = "0.9"
zstd = "0.13"
bzip2 = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
default = []
arm64 = []
